@@ -14,7 +14,7 @@ public abstract class BTAGenLayer extends GenLayer {
      */
     public static GenLayer[] initializeAllBiomeGenerators(long par0, WorldType par2WorldType, ArrayList<BTABiomeGenBase> biomesForGeneration, int oceanSize)
     {
-        GenLayerIsland var3 = new GenLayerIsland(1L);
+    	BTAGenLayerIsland var3 = new BTAGenLayerIsland(1L, oceanSize);
         GenLayerFuzzyZoom var9 = new GenLayerFuzzyZoom(2000L, var3);
         GenLayerAddIsland var10 = new GenLayerAddIsland(1L, var9);
         GenLayerZoom var11 = new GenLayerZoom(2001L, var10);
