@@ -23,7 +23,7 @@ public class BTAGenLayerIsland extends GenLayerIsland
             for (int var7 = 0; var7 < par3; ++var7)
             {
                 this.initChunkSeed((long)(par1 + var7), (long)(par2 + var6));
-                var5[var7 + var6 * par3] = this.nextInt(10) < oceanSize ? 1 : 0;
+                var5[var7 + var6 * par3] = this.nextInt(10) <= (10 - oceanSize) ? 1 : 0;
             }
         }
 
